// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-any ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 12,
    "endColumn": 15,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected any. Specify a different type.",
    "messageId": "unexpectedAny",
    "nodeType": "TSAnyKeyword",
    "ruleId": "@typescript-eslint/no-explicit-any",
    "severity": 1,
    "suggestions": Array [
      Object {
        "desc": "Use \`unknown\` instead, this will force you to explicitly, and safely assert the type is correct.",
        "fix": Object {
          "range": Array [
            11,
            14,
          ],
          "text": "unknown",
        },
        "messageId": "suggestUnknown",
      },
      Object {
        "desc": "Use \`never\` instead, this is useful when instantiating generic type parameters that you don't need to know the type of.",
        "fix": Object {
          "range": Array [
            11,
            14,
          ],
          "text": "never",
        },
        "messageId": "suggestNever",
      },
    ],
  },
]
`;

exports[`no-any ошибки индекс теста: 1 1`] = `
Array [
  Object {
    "column": 13,
    "endColumn": 16,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected any. Specify a different type.",
    "messageId": "unexpectedAny",
    "nodeType": "TSAnyKeyword",
    "ruleId": "@typescript-eslint/no-explicit-any",
    "severity": 1,
    "suggestions": Array [
      Object {
        "desc": "Use \`unknown\` instead, this will force you to explicitly, and safely assert the type is correct.",
        "fix": Object {
          "range": Array [
            12,
            15,
          ],
          "text": "unknown",
        },
        "messageId": "suggestUnknown",
      },
      Object {
        "desc": "Use \`never\` instead, this is useful when instantiating generic type parameters that you don't need to know the type of.",
        "fix": Object {
          "range": Array [
            12,
            15,
          ],
          "text": "never",
        },
        "messageId": "suggestNever",
      },
    ],
  },
]
`;

exports[`no-any ошибки индекс теста: 2 1`] = `
Array [
  Object {
    "column": 19,
    "endColumn": 22,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected any. Specify a different type.",
    "messageId": "unexpectedAny",
    "nodeType": "TSAnyKeyword",
    "ruleId": "@typescript-eslint/no-explicit-any",
    "severity": 1,
    "suggestions": Array [
      Object {
        "desc": "Use \`unknown\` instead, this will force you to explicitly, and safely assert the type is correct.",
        "fix": Object {
          "range": Array [
            18,
            21,
          ],
          "text": "unknown",
        },
        "messageId": "suggestUnknown",
      },
      Object {
        "desc": "Use \`never\` instead, this is useful when instantiating generic type parameters that you don't need to know the type of.",
        "fix": Object {
          "range": Array [
            18,
            21,
          ],
          "text": "never",
        },
        "messageId": "suggestNever",
      },
    ],
  },
]
`;

exports[`no-any ошибки индекс теста: 3 1`] = `
Array [
  Object {
    "column": 24,
    "endColumn": 27,
    "endLine": 1,
    "line": 1,
    "message": "Unexpected any. Specify a different type.",
    "messageId": "unexpectedAny",
    "nodeType": "TSAnyKeyword",
    "ruleId": "@typescript-eslint/no-explicit-any",
    "severity": 1,
    "suggestions": Array [
      Object {
        "desc": "Use \`unknown\` instead, this will force you to explicitly, and safely assert the type is correct.",
        "fix": Object {
          "range": Array [
            23,
            26,
          ],
          "text": "unknown",
        },
        "messageId": "suggestUnknown",
      },
      Object {
        "desc": "Use \`never\` instead, this is useful when instantiating generic type parameters that you don't need to know the type of.",
        "fix": Object {
          "range": Array [
            23,
            26,
          ],
          "text": "never",
        },
        "messageId": "suggestNever",
      },
    ],
  },
]
`;
